my-website/src/app/globals.css
@import "tailwindcss";

:root {
    --background: #ffffff;
    --foreground: #171717;
    --theme-color-1: #e6455d;
    --theme-color-2: #844a52;
    --theme-color-3: #b3d5ff;
    --theme-color-4: #5289cc;
    --theme-color-5: #e69045;
    --background: #0a0a0a;
    --foreground: #ededed;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-geist-mono);
}

body {
    background: var(--background);
    color: var(--foreground);
    font-family: Arial, Helvetica, sans-serif;
}

* {
    user-select: none;
    color-scheme: light;
    color: white;
}

p,
input,
textarea,
select,
[contenteditable="true"] {
    user-select: text;
}

.link-style {
    @apply text-[var(--theme-color-3)] hover:text-[var(--theme-color-1)] transition-colors;
}

.nav-style {
    @apply text-white hover:text-[var(--theme-color-1)] transition-colors;
}

@keyframes chroma-shift {
    0% {
        background-position: 0% 50%;
    }

    100% {
        background-position: 100% 50%;
    }
}

.chroma {
    background: linear-gradient(270deg, var(--theme-color-1), var(--theme-color-3), var(--theme-color-1));
    background-size: 200% 200%;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: chroma-shift 8s alternate ease-in-out infinite;
}

.main-layout {
    @apply relative z-0 flex flex-col min-h-screen bg-center bg-no-repeat bg-cover;
}

.main-section {
    @apply flex flex-col items-center justify-center flex-1 text-center p-6 md:p-12 bg-black/70
}

.split-layout {
    @apply flex flex-col lg:flex-row-reverse items-start justify-center w-full lg:w-[80%] gap-8;
}

.split-text {
    @apply w-full lg:w-1/2;
}
  
.split-image {
    @apply w-full lg:w-1/2;
}

.text-body {
    @apply text-base lg:text-xl text-justify leading-relaxed mb-6;
}

